Mon Apr  6 08:19:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Fixed unicode compile errors

Mon Apr  6 07:35:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/RTCORBA/Priority_Inversion_With_Bands/run_test.pl:
          Fixed time out errors.

Fri Apr  3 13:40:46 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Security/mixed_security_test/server.cpp:
          Fixed compilation warnings on LynxOS.

Fri Apr  3 13:33:14 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/DevGuideExamples/Security/ParticipatingApp/Messenger_i.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_OpenSSL_st_T.inl:
          Fixed compile errors on LynxOS 4.0.

Fri Apr  3 12:50:23 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/AddNameServerDlg.cpp:
        * utils/NamingViewer/BindDialog.cpp:
        * utils/NamingViewer/BindNewContext.cpp:
        * utils/NamingViewer/NamingTreeCtrl.cpp:
        * utils/NamingViewer/NamingViewer.cpp:
        * utils/NamingViewer/SelectNSDialog.cpp:
        * utils/NamingViewer/ViewIORDialog.cpp:
          Minor code improvements

Thu Apr  2 11:03:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/Exclusive_TMS.cpp
        * tao/Exclusive_TMS.h
          Resolved compiler errors on Codegear 2009.

        * tao/Muxed_TMS.h
        * tao/Reply_Dispatcher.h
          Resolved compiler errors when versioned
          namespaces are used.

Wed Apr  1 14:28:11 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_sequence_cdr_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_object_reference_sequence_ut.cpp: