@@ -149,12 +149,13 @@ TAO/tests/Bug_3559_Regression/run_test.pl:
 TAO/tests/Bug_3558_Regression/run_test.pl:
 TAO/tests/Bug_3565_Regression/run_test.pl:
 TAO/tests/Bug_3566_Regression/run_test.pl: !FIXED_BUGS_ONLY
-TAO/tests/Bug_3567_Regression/run_test.pl: !ST !MINIMUM !CORBA_E_COMPACT !CORBA_E_MICRO !FIXED_BUGS_ONLY
+TAO/tests/Bug_3567_Regression/run_test.pl: !ST !MINIMUM !CORBA_E_COMPACT !CORBA_E_MICRO
 TAO/tests/Bug_3574_Regression/run_test.pl:
 TAO/tests/Bug_3575_Regression/run_test.pl:
 TAO/tests/Bug_3597_Regression/run_test.pl:
 TAO/tests/Bug_3598a_Regression/run_test.pl: !MINIMUM !CORBA_E_COMPACT !CORBA_E_MICRO !DISABLE_INTERCEPTORS
-TAO/tests/Bug_3636_Regression/run_test.pl:
+TAO/tests/Bug_3630_Regression/run_test.pl:
+TAO/tests/Bug_3636_Regression/run_test.pl: !FIXED_BUGS_ONLY
 TAO/tests/DIOP/run_test.pl: !ST !NO_DIOP !ACE_FOR_TAO !CORBA_E_MICRO !LabVIEW_RT !WinCE !FUZZ
 TAO/tests/DIOP/run_test_ipv6.pl: IPV6 !ST !NO_DIOP !ACE_FOR_TAO !CORBA_E_MICRO !LabVIEW_RT !WinCE !FUZZ
 TAO/tests/RTCORBA/Activate_Object_Multiple_ORBs/run_test.pl: !MINIMUM !CORBA_E_COMPACT !CORBA_E_MICRO !ST
