@@ -1,0 +1,1 @@
+static Server_Strategy_Factory "-ORBConcurrency thread-per-connection"
